fix: word break in sources

--- a/src/views/article/Article.scss
+++ b/src/views/article/Article.scss
@@ -67,6 +67,7 @@
   &__sources {
     @extend %margin-md--top;
     font-style: italic;
+    word-break: break-word;
   }
 
   &__author-img {
